force-app/main/default/objects/Opportunity/fields/Custo_estimado__c.field-meta.xml
<CustomField>
    <fullName>Custo_estimado__c</fullName>
    <label>Custo estimado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>