force-app/main/default/objects/Opportunity/fields/Data_Fim__c.field-meta.xml
<CustomField>
    <fullName>Data_Fim__c</fullName>
    <label>Data Fim</label>
    <type>Date</type>
</CustomField>