force-app/main/default/objects/Opportunity/fields/Documentos_Anexados__c.field-meta.xml
<CustomField>
    <fullName>Documentos_Anexados__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documentos Anexados</label>
    <type>Checkbox</type>
</CustomField>