force-app/main/default/objects/Opportunity/fields/Email_Proposta_Enviado__c.field-meta.xml
<CustomField>
    <fullName>Email_Proposta_Enviado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Proposta Enviado</label>
    <type>Checkbox</type>
</CustomField>