force-app/main/default/objects/Opportunity/fields/Tempo_Estimado__c.field-meta.xml
<CustomField>
    <fullName>Tempo_Estimado__c</fullName>
    <description>Em semanas</description>
    <inlineHelpText>Tempo estimado em Semanas</inlineHelpText>
    <label>Tempo Estimado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>