force-app/main/default/objects/Opportunity/fields/User_Dev__c.field-meta.xml
<CustomField>
    <fullName>User_Dev__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Desenvolvedor Alocado</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Especialidade__c</field>
            <operation>equals</operation>
            <valueField>$Source.Tecnologia_do_Projeto__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>