force-app/main/default/objects/Opportunity/fields/Valor_da_proposta__c.field-meta.xml
<CustomField>
    <fullName>Valor_da_proposta__c</fullName>
    <label>Valor da proposta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>