force-app/main/default/objects/Opportunity/recordTypes/Projeto.recordType-meta.xml
<RecordType>
    <fullName>Projeto</fullName>
    <active>true</active>
    <businessProcess>Stage Consulting - Projetos</businessProcess>
    <description>Oportunidades de projetos de tecnologia</description>
    <label>Projeto</label>
</RecordType>