force-app/main/default/objects/Opportunity/validationRules/Bloquear_Fechamento_sem_Anexo.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloquear_Fechamento_sem_Anexo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &apos;Fechado - Ganhou&apos;),
    NOT(Documentos_Anexados__c)
)</errorConditionFormula>
    <errorMessage>Anexe os documentos assinados antes de fechar a oportunidade.</errorMessage>
</ValidationRule>