force-app/main/default/objects/Opportunity/validationRules/Bloquear_Formalizacao_sem_Negociacao.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloquear_Formalizacao_sem_Negociacao</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &apos;Formalização&apos;),
    ISBLANK(Valor_da_proposta__c)
)</errorConditionFormula>
    <errorMessage>Informe o valor da proposta antes de avançar para Formalização.
Bloquear_Negociacao_sem_Qualificacao</errorMessage>
</ValidationRule>