force-app/main/default/objects/Opportunity/validationRules/Bloquear_Negociacao_sem_Qualificacao.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloquear_Negociacao_sem_Qualificacao</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &apos;Negociação&apos;),
    OR(
        ISBLANK(Tecnologia_do_Projeto__c),
        ISBLANK(Tempo_Estimado__c),
        ISBLANK(Data_Inicio__c),
        ISBLANK(Data_Fim__c),
        ISBLANK(Custo_estimado__c)
    )
)</errorConditionFormula>
    <errorMessage>Preencha todos os dados da fase de Qualificação antes de avançar.</errorMessage>
</ValidationRule>